--- a/config.yml
+++ b/config.yml
@@ -5,20 +5,20 @@ title: "2020 China Collegiate Programming Contest Weihai Site(Warm Up)"
 start_at: "2020-10-24T15:00:00+08:00"
 # 比赛时长 默认单位：小时
 time_duration: 3
-# 题目
+# 题目列表，题目序号，字体颜色，背景颜色（对应气球颜色）
 problem_list:
-  - A
-  - B
-  - C
-  - D
-  - E
-  - F
-  - G
-  - H
-  - I
-  - J
-  - K
-  - L
+  - [A, 1, 2]
+  - [B, 1, 2]
+  - [C, 1, 2]
+  - [D, 1, 2]
+  - [E, 1, 2]
+  - [F, 1, 2]
+  - [G, 1, 2]
+  - [H, 1, 2]
+  - [I, 1, 2]
+  - [J, 1, 2]
+  - [K, 1, 2]
+  - [L, 1, 2]
 
 # 爬虫相关配置
 # 题目集的 Id 可以从导航栏中获得
