feat: 修改题目的颜色（字体颜色，背景色）
Change-Id: If2075bb7df1e50273e63deedf653c417fc065a13

--- a/config.yml
+++ b/config.yml
@@ -7,18 +7,18 @@ start_at: "2020-10-24T15:00:00+08:00"
 time_duration: 3
 # 题目列表，题目序号，字体颜色，背景颜色（对应气球颜色）
 problem_list:
-  - [A, 1, 2]
-  - [B, 1, 2]
-  - [C, 1, 2]
-  - [D, 1, 2]
-  - [E, 1, 2]
-  - [F, 1, 2]
-  - [G, 1, 2]
-  - [H, 1, 2]
-  - [I, 1, 2]
-  - [J, 1, 2]
-  - [K, 1, 2]
-  - [L, 1, 2]
+  - ["A", "#ffffff", "#bd0e0e"]
+  - ["B", "#ffffff", "#ff90e4"]
+  - ["C", "#000000", "#ffffff"]
+  - ["D", "#ffffff", "#26b93c"]
+  - ["E", "#000000", "#efd909"]
+  - ["F", "#ffffff", "#f35814"]
+  - ["G", "#ffffff", "#0c4c8a"]
+  - ["H", "#ffffff", "#9c9b9b"]
+  - ["I", "#ffffff", "#049a73"]
+  - ["J", "#ffffff", "#9f13ec"]
+  - ["K", "#ffffff", "#2ac5ca"]
+  - ["L", "#ffffff", "#8e3836"]
 
 # 爬虫相关配置
 # 题目集的 Id 可以从导航栏中获得
