--- a/config.yml
+++ b/config.yml
@@ -2,29 +2,29 @@
 # 比赛名称
 title: "2020 China Collegiate Programming Contest Weihai Site(Warm Up)"
 # 比赛开始时间 2020-10-24 15:00:00
-start_at: "2020-10-24T15:00:00+08:00"
+start_at: "2020-10-31T15:00:00+08:00"
 # 比赛时长 默认单位：小时
 time_duration: 3
 # 题目列表，题目序号，字体颜色，背景颜色（对应气球颜色）
-problem_list:
-  - ["A", "#ffffff", "#bd0e0e"]
-  - ["B", "#ffffff", "#ff90e4"]
-  - ["C", "#000000", "#ffffff"]
-  - ["D", "#ffffff", "#26b93c"]
-  - ["E", "#000000", "#efd909"]
-  - ["F", "#ffffff", "#f35814"]
-  - ["G", "#ffffff", "#0c4c8a"]
-  - ["H", "#ffffff", "#9c9b9b"]
-  - ["I", "#ffffff", "#049a73"]
-  - ["J", "#ffffff", "#9f13ec"]
-  - ["K", "#ffffff", "#2ac5ca"]
-  - ["L", "#ffffff", "#8e3836"]
+#problem_list:
+#  - ["A", "#ffffff", "#bd0e0e"]
+#  - ["B", "#ffffff", "#ff90e4"]
+#  - ["C", "#000000", "#ffffff"]
+#  - ["D", "#ffffff", "#26b93c"]
+#  - ["E", "#000000", "#efd909"]
+#  - ["F", "#ffffff", "#f35814"]
+#  - ["G", "#ffffff", "#0c4c8a"]
+#  - ["H", "#ffffff", "#9c9b9b"]
+#  - ["I", "#ffffff", "#049a73"]
+#  - ["J", "#ffffff", "#9f13ec"]
+#  - ["K", "#ffffff", "#2ac5ca"]
+#  - ["L", "#ffffff", "#8e3836"]
 
 # 爬虫相关配置
 # 题目集的 Id 可以从导航栏中获得
-problem_set_id: "1319876646838063104"
+problem_set_id: "1322401187006472192"
 # 限制榜单每次爬取的数量
 limit: 50
 cookie: ""
-path_file: "/var/www/srk_ccpc/data/ccpc2020weihai.srk.json"
+path_file: "/var/www/srk_ccpc/data/ccpc2020jinyang.srk.json"
 #path_file: "ranking.json"
