feat: 新增封榜功能

--- a/v3/config.template.yml
+++ b/v3/config.template.yml
@@ -6,6 +6,8 @@ contest:
   start_at: "2020-11-01T09:00:00+08:00"
   # 比赛时长 单位：小时
   duration: 5
+  # 封榜，比赛进行到指定时间，所有提交不展示结果
+  seal_ranking_at: "2020-11-01T09:00:00+08:00"
   # 有序题目列表，标签，别名，字体颜色，背景颜色（对应气球颜色）
   problems:
     - ["7-1", "A", "#ffffff", "#bd0e0e"]
