fix: 修复 marker style 不展示/非专业组无排名/slogan 不展示问题

--- a/pta/config.template.yml
+++ b/pta/config.template.yml
@@ -27,7 +27,7 @@ contest:
 spider:
   # 比赛 Id
   contest_id: "1322537933606182912"
-  # 提交记录 Id 从头
+  # 提交记录 Id 从这个 id 开始往后爬取
   submit_id: "1"
   # 每次爬取的数目
   limit: 30
