--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ node_modules
 venv/
 cookie.txt
 out.srk.json
+rank_spider/domjudge_image_detection/detection/
+rank_spider/domjudge_image_detection/result/
