feat: add rank sources gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ cookie.txt
 out.srk.json
 rank_spider/domjudge_image_detection/detection/
 rank_spider/domjudge_image_detection/result/
+rank_spider/icpc/*
+rank_spider/ccpc/*
+rank_spider/province/*
