--- a/spidercraft/package.json
+++ b/spidercraft/package.json
@@ -10,7 +10,7 @@
   "author": "bLue",
   "license": "ISC",
   "dependencies": {
-    "@algoux/standard-ranklist-utils": "^0.2.9",
+    "@algoux/standard-ranklist-utils": "^0.2.11",
     "axios": "^0.26.1",
     "cheerio": "^0.22.0",
     "commander": "^11.1.0",
@@ -24,12 +24,14 @@
     "p-limit": "^3.1.0",
     "p-queue": "^6.6.2",
     "p-retry": "^4.6.2",
+    "pdf-lib": "^1.17.1",
+    "pdf2json": "^3.0.1",
     "tough-cookie": "^5.1.2",
     "undici": "^5.29.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@algoux/standard-ranklist": "^0.3.8",
+    "@algoux/standard-ranklist": "^0.3.12",
     "@types/cheerio": "^0.22.35",
     "@types/fs-extra": "^9.0.13",
     "@types/lodash": "^4.17.16",
